@@ -33,6 +33,7 @@ t/data/cnb003698545-incorrect_field_020a_isbn_formatting.xml
 t/data/fake1-incorrect_field_020a.xml
 t/data/fake2-incorrect_leader.xml
 t/data/fake3-missing_field_008.xml
+t/data/fake4-missing_field_040.xml
 t/MARC-Validator-Abstract/01-use.t
 t/MARC-Validator-Abstract/02-version.t
 t/MARC-Validator-Abstract/03-new.t
