@@ -2,6 +2,7 @@
  - Add check for 008 field with continuing resource currently published.
  - Add check for 040a field.
  - Add test for missing 008 field in field_008 plugin.
+ - Add test for missing 040 field in field_040 plugin.
  - Add tests for bad leader to field_008 and field_040 plugins.
  - Change field 001 to fake1 in fake test file.
  - Update copyright years.
